Summary of important user-visible changes for generate_html 0.1.13:
-------------------------------------------------------------------

 ** Changes to the package index page

    o generate_package_html: Make icons clickable.

 ** Change URLs

    o get_html_options: Use the new https URLs for the octave-forge
      (default) style.

 ** Bug fixes

    o html_help_text, generate_package_html: Handle undocumented
      functions.

    o generate_html_manual (get_txi_files): Ignore
      version-octave.texi, which was previously named version.texi.

 ** Improve release Makefile

    o Makefile: Make release tarballs reproducible


Summary of important user-visible changes for generate_html 0.1.12:
-------------------------------------------------------------------

 ** New option for generate_package_html

    o generate_package_html, get_html_options: Add new field
      'older_versions_download' to the option structure.
      This field makes it possible for packages to customize (or
      suppress) the "older versions" download link, which is actually
      Octave Forge-specific (patch #8984).

 ** Changes to the package index page

    o generate_package_html: The content of the optional "url" field
      of the DESCRIPTION file is now shown beneath the news link
      (patch #8990).


Summary of important user-visible changes for generate_html 0.1.11:
-------------------------------------------------------------------

 ** Content of autoload field not shown anymore

    o generate_package_html: index.html no longer displays autoload
      information (and there is no other place in the generated HTML
      with that information).  The main reasons for this change are:

       1) there are no Octave Forge packages that autoload anymore,

       2) support for autoload of packages will be completely removed
          in Octave 4.2.x.

 ** New option for generate_package_html

    o generate_package_html, get_html_options: Add new field