@@ -1,3 +1,8 @@
+ ** Vectorize generation of alphabetic function database.
+
+ ** Make alphabetic databases for class methods and namespaced
+    functions, too.
+
 Summary of important user-visible changes for generate_html 0.1.13:
 -------------------------------------------------------------------
 
